--- a/GP_HorusEye/src/Pages/HorusEye/HorusEye.css
+++ b/GP_HorusEye/src/Pages/HorusEye/HorusEye.css
@@ -129,10 +129,36 @@ body{
     align-self: center;
 }
 .HorusEye button:hover{
+background-color: rgb(52, 197, 23);
+color: rgb(235, 228, 228);
+transition: 0.3s;
+}
+.HorusEye input:hover{
     background-color: rgb(52, 197, 23);
     color: rgb(235, 228, 228);
     transition: 0.3s;
 }
+.HorusEye button:active{
+    background-color: rgb(0, 0, 0);
+    color: rgb(235, 228, 228);
+    transition: 0.3s;
+}
+
+
+.HorusEye img{
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    margin-top: 1.28rem;
+    padding: 1rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    text-align: center;
+    align-self: start;
+}
+
+
 .video{
     border: 5px solid black;
     border-radius: 10px;
