--- a/GP_HorusEye/src/Pages/Booking/Booking.css
+++ b/GP_HorusEye/src/Pages/Booking/Booking.css
@@ -7,6 +7,7 @@
     background-position: center;
     display: flex;
     justify-content: center;
+    background-attachment: fixed;
 }
 
 .Booking{
