--- a/GP_HorusEye/src/Pages/HorusEye/HorusEye.css
+++ b/GP_HorusEye/src/Pages/HorusEye/HorusEye.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    padding-top: 5rem;
+    padding-top: 16rem;
     
 }
 @media screen and (max-width:644px){
@@ -34,6 +34,7 @@ body{
     align-items: center;
     background-size: cover;
     background-position: center ;
+    background-attachment: fixed;
     
     
 }
