--- a/GP_HorusEye/src/Pages/Login/Logon.css
+++ b/GP_HorusEye/src/Pages/Login/Logon.css
@@ -22,9 +22,10 @@ body{
     display: flex;
     justify-content: center;
     align-items:center;
-    height:100vh;
+    height:100%;
     background-size: cover;
     background-position: center ;
+    background-attachment: fixed;
     
     
 }
