--- a/GP_HorusEye/src/Pages/VerifyPage/Verifypage.css
+++ b/GP_HorusEye/src/Pages/VerifyPage/Verifypage.css
@@ -27,6 +27,7 @@ body{
     background-size: cover;
     background-position: center ;
     height: 100vh;
+    background-attachment: fixed;
 }
 .Wrapper{
     
