--- a/GP_HorusEye/src/Pages/Booking/Booking.css
+++ b/GP_HorusEye/src/Pages/Booking/Booking.css
@@ -2,11 +2,12 @@
 .BackG{
     background-image: url("/public/old-city-architecture-ancient-wall-historic-876774-wallhere.com.jpg");
     height: 100vh;
-    background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    background-repeat: repeat-y;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     background-attachment: fixed;
 }
 
@@ -77,3 +78,70 @@
     border: 1px solid #000;
     width: 50%;
 }
+
+.card {
+    width: 20vw;
+    height: 10vh;
+    background: rgb(228, 223, 223);
+    padding: .4em;
+    border-radius: 6px;
+  }
+  
+  .card-image {
+    background-color: rgb(236, 236, 236);
+    width: 100%;
+    height: 130px;
+    border-radius: 6px 6px 0 0;
+  }
+  
+  .card-image:hover {
+    transform: scale(0.98);
+  }
+  
+  .category {
+    text-transform: uppercase;
+    font-size: 0.7em;
+    font-weight: 600;
+    color: rgb(63, 121, 230);
+    padding: 10px 7px 0;
+  }
+  
+  .category:hover {
+    cursor: pointer;
+  }
+  
+  .heading {
+    font-weight: 600;
+    color: rgb(88, 87, 87);
+    padding: 7px;
+  }
+  
+  .heading:hover {
+    cursor: pointer;
+  }
+  
+  .author {
+    color: gray;
+    font-weight: 400;
+    font-size: 11px;
+    padding-top: 20px;
+  }
+  
+  .name {
+    font-weight: 600;
+  }
+  
+  .name:hover {
+    cursor: pointer;
+  }
+
+    
+  .Hotels{
+    margin-top: 3rem;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    gap: 2rem;
+  }
+    
