--- a/GP_HorusEye/src/Pages/Booking/Booking.css
+++ b/GP_HorusEye/src/Pages/Booking/Booking.css
@@ -1,7 +1,7 @@
 
 .BackG{
     background-image: url("/public/old-city-architecture-ancient-wall-historic-876774-wallhere.com.jpg");
-    height: 100vh;
+    height: fit-content ;
     background-size: cover;
     background-position: center;
     background-repeat: repeat-y;
@@ -57,18 +57,18 @@
 }
 .Booking button{
     
-    margin-left: 50%;
-    transform: translateX(-50%);
-    background-color: #000;
-    color: #fff;
-    border: none;
-    padding: 0.5rem 1rem;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: 0.3s;
-    border-radius: 10px;
-    width: 50%;
-    margin-top: 2rem;
+  background-color: #000;
+  color: #fff;
+  border: none;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: 0.3s;
+  border-radius: 10px;
+  width: 5rem;
+  margin-top: 1.5rem;
+  margin-left: 40%;
+  transform: translateX(-50%);
     
 
 }
@@ -80,8 +80,8 @@
 }
 
 .card {
-    width: 20vw;
-    height: 10vh;
+    width: 29vw;
+    height: 5vh;
     background: rgb(228, 223, 223);
     padding: .4em;
     border-radius: 6px;
@@ -99,7 +99,6 @@
   }
   
   .category {
-    text-transform: uppercase;
     font-size: 0.7em;
     font-weight: 600;
     color: rgb(63, 121, 230);
@@ -116,12 +115,10 @@
     padding: 7px;
   }
   
-  .heading:hover {
-    cursor: pointer;
-  }
   
+
   .author {
-    color: gray;
+    color: rgb(191, 31, 31);
     font-weight: 400;
     font-size: 11px;
     padding-top: 20px;
@@ -140,8 +137,30 @@
     margin-top: 3rem;
     display: flex;
     flex-wrap: wrap;
+    width: fit-content;
     flex-direction: row;
     justify-content: center;
-    gap: 2rem;
-  }
+    gap: 2.5rem;
     
+  }
+
+  .btnBook{
+    background-color: #000;
+    color: #fff;
+    border: none;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: 0.3s;
+    border-radius: 10px;
+    width: 50%;
+    margin-top: 1.5rem;
+    margin-left: 50%;
+    transform: translateX(-50%);
+  }
+  .btnBook:hover{
+    background-color: rgb(52, 197, 23);
+    color: #000;
+    border: 1px solid #000;
+    width: 50%;
+  }
