--- a/GP_HorusEye/src/Pages/HorusEye/HorusEye.css
+++ b/GP_HorusEye/src/Pages/HorusEye/HorusEye.css
@@ -92,7 +92,7 @@ body{
 
 .HorusEye{
     border-radius: 10px;
-    width: fit-content;
+    width: 100%;
     height: fit-content;
     margin-top: 1.28rem;
     display: flex;
@@ -100,45 +100,31 @@ body{
     flex-wrap: wrap;
     gap: 5rem;
     flex-direction: row;
-    justify-content: center;
     margin-bottom: 10rem;
+    align-items: center;
     
 }
 
-.HorusEye input{
+
+.HorusEye button{
     background-color: rgb(235, 228, 228);
     border-radius: 10px;
-    
+    width: 100%;
     height: 100%;
     padding: 1rem;
     font-weight: 500;
     text-transform: uppercase;
     letter-spacing: 0.2rem;
     text-align: center;
-
-}
-.HorusEye button{
-    background-color: rgb(235, 228, 228);
-    border-radius: 10px;
-    width: 100%;
-    height: fit-content;
-    padding: 1rem;
-    font-weight: 500;
-    text-transform: uppercase;
-    letter-spacing: 0.2rem;
-    text-align: center;
     align-self: center;
+    margin-top: 1rem;
 }
 .HorusEye button:hover{
 background-color: rgb(52, 197, 23);
 color: rgb(235, 228, 228);
 transition: 0.3s;
 }
-.HorusEye input:hover{
-    background-color: rgb(52, 197, 23);
-    color: rgb(235, 228, 228);
-    transition: 0.3s;
-}
+
 .HorusEye button:active{
     background-color: rgb(0, 0, 0);
     color: rgb(235, 228, 228);
@@ -166,6 +152,28 @@ transition: 0.3s;
     align-items: center;
     width: 100%;
 }
+
+.LabelFile{
+    background-color: rgb(235, 228, 228);
+    border-radius: 10px;
+    height: 437px;
+    width: 100%;
+    padding: 1rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 0.2rem;
+    align-items: center;
+
+}
+
+
+.LabelFile:hover{
+    background-color: rgb(52, 197, 23);
+    color: rgb(235, 228, 228);
+    transition: 0.3s;
+}
+
 .HorusEyeDec{
     background-color: rgb(235, 228, 228);
     border-radius: 10px;
@@ -202,7 +210,4 @@ transition: 0.3s;
     border-radius: 10px;
     width: fit-content;
     height: fit-content;
-
-
 }
-
