--- a/GP_HorusEye/src/Pages/Booking/Booking.css
+++ b/GP_HorusEye/src/Pages/Booking/Booking.css
@@ -12,7 +12,7 @@
 }
 
 .Booking{
-    BORDER: 3PX SOLID BLACK;
+    BORDER: 3PX SOLID #000000;
     border-radius: 10px;
     height: fit-content;
     width: 40%;
