TransferData(Email)UsingRecoil
Using Recoil to transfer Email data from SignUp page to VeriFyPagen and transfer CheckIn, CheckOut and Room from BookingPage to ViewHotelDetailsPage

--- a/GP_HorusEye/src/Pages/Booking/ViewHotelDetails.css
+++ b/GP_HorusEye/src/Pages/Booking/ViewHotelDetails.css
@@ -1,6 +1,5 @@
 .BG{
     background-image: url("/public/old-city-architecture-ancient-wall-historic-876774-wallhere.com.jpg");
-    height: 100vh;
     background-size: cover;
     background-position: center;
     background-repeat: repeat-y;
@@ -11,8 +10,35 @@
 }
 
 .HotelDetails{
-    margin-top: 2rem;
-    margin-left: 2rem ;
-    align-self: self-start;
-    color: aliceblue;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    backdrop-filter: blur(10px);;
+    background-size: cover;
+    background-position: center;
+    background-repeat: repeat-y;
+    display: flex;
+    flex-direction: column;
+    padding-top: 1rem;
+    width: 100%;
+    color:antiquewhite;
+    row-gap: 3rem;
 }
+.ImageHotel{
+    background-image: url("/GP_HorusEye/public/architecture-ancient-pillar-hieroglyphics-Egypt-historic-1925921-wallhere.com.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: repeat-y;
+    background-color: antiquewhite;
+    width: 60vw;
+    height: 40vh;
+    border-radius: 10px;
+    margin-top: 2rem;
+    
+}
+.Btnss{
+    margin-bottom: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between
+  
+  }
