--- a/GP_HorusEye/src/Pages/Booking/Booking.css
+++ b/GP_HorusEye/src/Pages/Booking/Booking.css
@@ -81,12 +81,12 @@
 }
 
 .card {
-    width: 29vw;
-    height: 5vh;
-    background: rgb(228, 223, 223);
+    display: flex;
+    flex-wrap: wrap;
+    width: fit-content;
+    height: fit-content;
     padding: .4em;
-    border-radius: 6px;
-    
+    border-radius: 6px; 
   }
   
   .card-image {
@@ -160,8 +160,8 @@
     transition: 0.3s;
     border-radius: 10px;
     margin-top: 1.5rem;
-    width: 40%;
-    height: 40%;
+    width: 7rem;
+    height: 3rem;
   }
 
   .btnBook:hover{
@@ -180,8 +180,8 @@
     transition: 0.3s;
     border-radius: 10px;
     margin-top: 1.5rem;
-    width: 40%;
-    height: 40%;
+    width: 8rem;
+    height: 3rem;
   }
   .btnDetails:hover{
     background-color: rgb(52, 197, 23);
@@ -192,6 +192,7 @@
 .Btns{
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  gap: 2rem;
 
 }
