--- a/GP_HorusEye/src/Pages/Booking/Booking.css
+++ b/GP_HorusEye/src/Pages/Booking/Booking.css
@@ -15,6 +15,7 @@
     BORDER: 3PX SOLID #000000;
     border-radius: 10px;
     height: fit-content;
+    padding-bottom: 1rem;
     width: 40%;
     margin-top: 3.2rem;
     background-color: #f8f9fa;
@@ -147,6 +148,7 @@
     flex-direction: row;
     justify-content: center;
     gap: 2.5rem;
+    padding-bottom: 5rem;
     
   }
 
