--- a/GP_HorusEye/src/Pages/ViewHistory/ViewHistory.css
+++ b/GP_HorusEye/src/Pages/ViewHistory/ViewHistory.css
@@ -45,7 +45,7 @@ margin-left: 2rem;
     padding: 1rem;
     background-color: rgba(255, 255, 255, 0.575);
     backdrop-filter: blur(8px);
-    justify-self: start;
+    align-self: center;
     width: 70%;
     margin: 2rem;
     border-radius: 10px;
