--- a/GP_HorusEye/src/Components/NavBar.css
+++ b/GP_HorusEye/src/Components/NavBar.css
@@ -1,19 +1,19 @@
-body{
+/* body{
     padding-top: 5rem;
     
-}
-@media screen and (max-width:644px){
+} */
+/* @media screen and (max-width:644px){
     body{
         padding-top: 10rem;
         
-    }
-}
-@media screen and (max-width:352px){
+    } */
+/* } */
+/* @media screen and (max-width:352px){
     body{
         padding-top: 15rem;
         
     }
-}
+} */
 
 /*.MainNav{   
 height: 4rem;
@@ -24,54 +24,58 @@ position: fixed;
 z-index: 100;
 background-color: rosybrown; 
 }*/
-
+.NAVi{
+    font-size: 30px;
+}
 
 
 .NAV {
 width: 100%;
 height: fit-content;
 top: 0;
-margin-bottom: 50px;
+margin-bottom: 0px;
 position: fixed;
 z-index: 100;
-background-color: rgba(53, 53, 31, 0.952);
+background-color: rgba(171, 130, 97, 1);
 z-index: 100;
 display: flex;
-flex-wrap: wrap;
+/* flex-wrap: wrap; */
 justify-content: space-between;
 align-items: center;
 padding: 0.5rem;
-backdrop-filter: blur(9px);
-border-bottom: 3px solid rgba(0, 0, 0, 0.863);
+backdrop-filter: blur(7px);
+border-bottom: 0px solid rgba(255, 255, 255, 0.863);
 }
 
 
 
 .NAV a img{
-    height: 4.3rem;
+    height: 2.5rem;
     margin: 0.3rem;
 }
 
 
-.NAVi:hover{
-    border-bottom: 5px solid #ffebcd;
-    transform: scale(1.1);
-}
 .NAVi h3:hover{
-    color: #ffebcd;
+    color: #000000;
 }
 
     .NAV a {
-        color: #000000;
-        font-size: 1.5rem;
-        font-weight: 500;
+        color: #ffffff;
+        font-size: 1rem;
+        font-weight: 300;
         margin: 0.1rem;
         transition: 0.3s;
         text-decoration: none;
         align-items: center;
     }
-
-
+    .middle_elements{
+        display: flex;
+    }
+    .navbar-brand{
+        padding: 15px;
+        padding-bottom: 0px;
+        font-size:1px;
+    }
     .IMG:hover {
         transition:  0.3s;
         transform: rotateY(180deg);
